rumbas/src/exam/snapshots/rumbas__exam__examples_examinput__compile_examples-23.snap
---
source: rumbas/src/exam/mod.rs
expression: "&example"

---
type: diagnostic
locales: "template:template_key"
name: "template:template_key"
navigation:
  allow_printing: "template:template_key"
  can_regenerate: "template:template_key"
  confirm_when_leaving: "template:template_key"
  on_leave:
    action: warn_if_not_attempted
    message: "file:path/to/file"
  show_names_of_question_groups: "template:template_key"
  show_steps: "template:template_key"
  show_title_page: "template:template_key"
  start_password: "template:template_key"
timing:
  duration_in_seconds: 2
  allow_pause: "template:template_key"
  on_timeout:
    action: warn
    message: "file:path/to/file"
  timed_warning:
    action: warn
    message: "file:path/to/file"
feedback:
  percentage_needed_to_pass: 1.2
  show_name_of_student: "template:template_key"
  show_current_marks: "template:template_key"
  show_maximum_marks: "template:template_key"
  show_answer_state: "template:template_key"
  allow_reveal_answer: "template:template_key"
  review: ~
  advice: "template:template_key"
  intro: "template:template_key"
  feedback_messages: "template:template_key"
question_groups: "template:template_key"
numbas_settings: ~
diagnostic:
  script:
    custom:
      content: "file:path/to/file"
      placeholders:
        placeholder1:
          content:
            en: en value of placeholder1
            nl: nl value of placeholder1
          placeholders: {}
        placeholder2:
          content:
            en: en version of placeholder2
            nl: nl version of placeholder2
          placeholders: {}
  objectives: "template:template_key"
  topics: "template:template_key"

