rumbas/src/exam/snapshots/rumbas__exam__examples_examinput__compile_examples-25.snap
---
source: rumbas/src/exam/mod.rs
expression: "&example"
---
type: normal
name:
  content:
    nonjmetext§: "file:path/to/file"
  placeholders:
    placeholder1:
      content:
        en: en value of placeholder1
        nl: nl value of placeholder1
      placeholders: {}
    placeholder2:
      content:
        en: en version of placeholder2
        nl: nl version of placeholder2
      placeholders: {}
locales:
  - name: nonjmetext§
    numbas_locale: ar-SA
  - name: "template:template_key"
    numbas_locale: de-DE
  - name:
      template_key: template_key
      default_value: ~
    numbas_locale: en-GB
  - name: ~
    numbas_locale: es-ES
  - name: nonjmetext§
    numbas_locale: fr-FR
  - name: "template:template_key"
    numbas_locale: he-IL
  - name:
      template_key: template_key
      default_value: ~
    numbas_locale: in-ID
  - name: ~
    numbas_locale: it-IT
  - name: nonjmetext§
    numbas_locale: ja-JP
  - name: "template:template_key"
    numbas_locale: ko-KR
  - name:
      template_key: template_key
      default_value: ~
    numbas_locale: nb-NO
  - name: ~
    numbas_locale: nl-NL
  - name: nonjmetext§
    numbas_locale: pl-PL
  - name: "template:template_key"
    numbas_locale: pt-BR
  - name:
      template_key: template_key
      default_value: ~
    numbas_locale: sq-AL
  - name: ~
    numbas_locale: sv-SE
  - name: nonjmetext§
    numbas_locale: tr-TR
  - name: "template:template_key"
    numbas_locale: vi-VN
  - name:
      template_key: template_key
      default_value: ~
    numbas_locale: zg-CN
  - name: ~
    numbas_locale: "template:template_key"
  - name: nonjmetext§
    numbas_locale:
      template_key: template_key
      default_value: ~
  - name: "template:template_key"
    numbas_locale: ~
  - "template:template_key"
  - template_key: template_key
    default_value: ~
navigation:
  template_key: template_key
  default_value: ~
timing:
  duration_in_seconds: 2
  allow_pause:
    template_key: template_key
    default_value: ~
  on_timeout: ~
  timed_warning: ~
feedback:
  percentage_needed_to_pass: "template:template_key"
  show_name_of_student:
    template_key: template_key
    default_value: ~
  show_current_marks:
    template_key: template_key
    default_value: ~
  show_maximum_marks:
    template_key: template_key
    default_value: ~
  show_answer_state:
    template_key: template_key
    default_value: ~
  allow_reveal_answer:
    template_key: template_key
    default_value: ~
  review:
    show_score:
      template_key: template_key
      default_value: ~
    show_feedback:
      template_key: template_key
      default_value: ~
    show_expected_answer:
      template_key: template_key
      default_value: ~
    show_advice:
      template_key: template_key
      default_value: ~
  advice:
    content:
      nonjmetext§:
        template_key: template_key
        default_value: ~
    placeholders:
      placeholder1:
        content:
          en: en value of placeholder1
          nl: nl value of placeholder1
        placeholders: {}
      placeholder2:
        content:
          en: en version of placeholder2
          nl: nl version of placeholder2
        placeholders: {}
  intro:
    content:
      nonjmetext§:
        template_key: template_key
        default_value: ~
    placeholders:
      placeholder1:
        content:
          en: en value of placeholder1
          nl: nl value of placeholder1
        placeholders: {}
      placeholder2:
        content:
          en: en version of placeholder2
          nl: nl version of placeholder2
        placeholders: {}
  feedback_messages:
    template_key: template_key
    default_value: ~
question_groups:
  - name:
      content:
        nonjmetext§: "file:path/to/file"
      placeholders:
        placeholder1:
          content:
            en: en value of placeholder1
            nl: nl value of placeholder1
          placeholders: {}
        placeholder2:
          content:
            en: en version of placeholder2
            nl: nl version of placeholder2
          placeholders: {}
    picking_strategy:
      type: all_ordered
    questions:
      - path
      - "template:template_key"
      - template_key: template_key
        default_value: ~
  - name:
      content:
        nonjmetext§: "template:template_key"
      placeholders:
        placeholder1:
          content:
            en: en value of placeholder1
            nl: nl value of placeholder1
          placeholders: {}
        placeholder2:
          content:
            en: en version of placeholder2
            nl: nl version of placeholder2
          placeholders: {}
    picking_strategy:
      type: all_shuffled
    questions: "template:template_key"
  - name:
      content:
        nonjmetext§:
          template_key: template_key
          default_value: ~
      placeholders:
        placeholder1:
          content:
            en: en value of placeholder1
            nl: nl value of placeholder1
          placeholders: {}
        placeholder2:
          content:
            en: en version of placeholder2
            nl: nl version of placeholder2
          placeholders: {}
    picking_strategy:
      type: random_subset
      pick_questions: 2
    questions:
      template_key: template_key
      default_value: ~
  - name:
      content: "file:path/to/file"
      placeholders:
        placeholder1:
          content:
            en: en value of placeholder1
            nl: nl value of placeholder1
          placeholders: {}
        placeholder2:
          content:
            en: en version of placeholder2
            nl: nl version of placeholder2
          placeholders: {}
    picking_strategy:
      type: random_subset
      pick_questions: "template:template_key"
    questions: ~
  - name: "file:path/to/file"
    picking_strategy:
      type: random_subset
      pick_questions:
        template_key: template_key
        default_value: ~
    questions:
      - path
      - "template:template_key"
      - template_key: template_key
        default_value: ~
  - name: "template:template_key"
    picking_strategy: "template:template_key"
    questions: "template:template_key"
  - name:
      template_key: template_key
      default_value: ~
    picking_strategy:
      template_key: template_key
      default_value: ~
    questions:
      template_key: template_key
      default_value: ~
  - name: ~
    picking_strategy: ~
    questions: ~
  - "template:template_key"
  - template_key: template_key
    default_value: ~
numbas_settings:
  theme: ~

