rumbas/src/exam/snapshots/rumbas__exam__examples_examinput__compile_examples-27.snap
---
source: rumbas/src/exam/mod.rs
expression: "&example"
---
type: diagnostic
locales: "template:template_key"
name:
  content:
    nonjmetext§: "template:template_key"
  placeholders:
    placeholder1:
      content:
        en: en value of placeholder1
        nl: nl value of placeholder1
      placeholders: {}
    placeholder2:
      content:
        en: en version of placeholder2
        nl: nl version of placeholder2
      placeholders: {}
navigation:
  allow_printing: false
  can_regenerate: false
  confirm_when_leaving: false
  on_leave:
    action: prevent_if_not_attempted
    message:
      content:
        nonjmetext§: "template:template_key"
      placeholders:
        placeholder1:
          content:
            en: en value of placeholder1
            nl: nl value of placeholder1
          placeholders: {}
        placeholder2:
          content:
            en: en version of placeholder2
            nl: nl version of placeholder2
          placeholders: {}
  show_names_of_question_groups: false
  show_steps: false
  show_title_page: false
  start_password: ~
timing:
  duration_in_seconds: ~
  allow_pause: "template:template_key"
  on_timeout: ~
  timed_warning: ~
feedback: ~
question_groups: "template:template_key"
numbas_settings:
  theme: ~
diagnostic:
  script: ~
  objectives: "template:template_key"
  topics: "template:template_key"

